# Online-chat

./: .gitignore  CMakeLists.txt  README.md  Requirements Specification.md  main.cpp
Client/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
Message/: message.hpp
Server/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
utils/: message.hpp
